--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iconify/json": "^2.1.135",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "^18.11.9",
+    "@unocss/reset": "^0.46.5",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
