--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
-    "pinia": "^2.0.28",
-    "vue": "^3.2.45",
+    "pinia": "^2.0.32",
+    "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.150",
+    "@iconify/json": "2.2.26",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@types/node": "^18.11.13",
-    "@unocss/reset": "^0.47.5",
+    "@types/node": "^18.14.1",
+    "@unocss/reset": "^0.50.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.29.0",
-    "eslint-plugin-vue": "^9.8.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.1",
-    "typescript": "~4.9.4",
-    "unocss": "^0.47.5",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12"
+    "prettier": "^2.8.4",
+    "typescript": "~4.9.5",
+    "unocss": "^0.50.0",
+    "vite": "^4.1.4",
+    "vue-tsc": "^1.1.7"
   }
 }
